parser/src/snapshots/rustpython_parser__string__tests__raw_byte_literal_2.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Bytes(
                                [
                                    92,
                                    92,
                                ],
                            ),
                            kind: None,
                            range: 0..6,
                        },
                    ),
                },
                range: 0..6,
            },
        ),
    },
]
