parser/src/snapshots/rustpython_parser__string__tests__triple_quoted_raw_fstring.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: JoinedStr(
                ExprJoinedStr {
                    values: [
                        FormattedValue(
                            ExprFormattedValue {
                                value: Name(
                                    ExprName {
                                        id: Identifier(
                                            "x",
                                        ),
                                        ctx: Load,
                                        range: 6..7,
                                    },
                                ),
                                conversion: Int(
                                    0,
                                ),
                                format_spec: None,
                                range: 0..11,
                            },
                        ),
                    ],
                    range: 0..11,
                },
            ),
            range: 0..11,
        },
    ),
]
